tests/compilation/examples/fail_warn.stderr
error: expected one of `!`, `.`, `::`, `;`, `?`, `{`, `}`, or an operator, found `does`
 --> tests/compilation/examples/fail_warn.rs:7:14
  |
7 |     trybuild does not fail on warnings
  |              ^^^^ expected one of 8 possible tokens

warning: be careful
 --> tests/compilation/examples/fail_warn.rs:3:1
  |
3 | warn!();
  | ^^^^^^^
  |
  = note: this warning originates in the macro `warn` (in Nightly builds, run with -Z macro-backtrace for more info)
